assets/css/style.css
* {
    box-sizing: border-box;
}
body, html{
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	font-style: italic;
	font-size: 18px;
	color: #58667f;/* main text color*/
}
h1,h2,h3,h4,h5,h6 {
	font-weight: 600;
	font-style:normal;
	text-transform: uppercase;
}
h1,h2,h3,h4,p{
	margin: 0;
	padding: 0;
}
h1{
	font-size:1.7em;
}
h2{
	font-size: 1.5em;
}
h3{
	font-size: 1.333em;
}
h4{
	font-size: 1em;
}
h5{
	font-size: 0.889em;
}
h6{
	font-size:0.778em;
}
.text__color--main{
	color:#58667f;
}
.text__color--mutted{
	color: #97a5b7;
}
.text__color--red{
	color:#ed485c;
}
.text__color--white{
	color:#fefeff;
}
img{
	vertical-align:bottom;
}
.col-1 {
	width: 8.33%;
}
.col-2 {
	width: 16.66%;
}
.col-3 {
	width: 25%;
}
.col-4 {
	width: 33.33%;
}
.col-5 {
	width: 41.66%;
}
.col-6 {
	width: 50%;
}
.col-7 {
	width: 58.33%;
}
.col-8 {
	width: 66.66%;
}
.col-9 {
	width: 75%;
}
.col-10 {
	width: 83.33%;
}
.col-11 {
	width: 91.66%;
}
.col-12 {
	width: 100%;
}
[class*="col-"] {
    float: left;
    padding:0 15px;
}
.row{
	margin-left:-15px;
	margin-right:-15px;
	display: block;
}
.row::after {
    content: "";
    clear: both;
    display: block;
}
.clearfix:after {
  content:"";
  display:block;
  clear:both;
}
header{
	margin-top: 15px;
}
.content{
	min-width: 320px;
	max-width: 1170px;
	padding:0 15px;
	margin:0 auto;
}
/* main styles end */

/* 			Promo: 			 */
.promo{
	height: 100vh;
	background: linear-gradient( 180deg, rgb(31,31,40) 0%, rgba(31,31,40,0.8) 12%, rgba(31,31,40,0.6) 20%, rgba(31,31,40,0.6) 50%, rgba(31,31,40,0.6) 80%, rgba(31,31,40,0.8) 88%, rgb(31,31,40) 100%),url("../images/promo_bg.jpg") center no-repeat;
	background-size: cover;
	overflow: hidden;
	vertical-align: bottom;
}
/* 			End Promo: 			 */
/* 			Menu 		 		 */
.header__logo{
	display:inline-block;
	font-size: 16px;
	color:#fff;
	text-transform: uppercase;
}
.header__logo__icon{
	display: inline-block;
	width: 0;
	height: 0;
	border-left: 11px solid transparent;
	border-right: 11px solid transparent;
	border-top: 13px solid #ed485c;
	margin:0 10px;
}
nav{
	float:right;
}
.menu{
	display: block;
	padding: 0;
	margin:0;
	font-size: 14px;
	line-height: 16px;
	color: #fff;
	text-transform: uppercase;
}
.menu li{
	list-style: none;
	display: inline-block;
	margin-right: 25px;
}
.menu li a{
	color: #fff;
	text-decoration: none;
}
.menu li a:hover{
	color:#ed485c;
}
.menu__mobile{
	color: #fefeff;
	text-align: right;
	display: block;
}
.menu__mobile i{
		display:none;
	}
.menu__mobile:hover .menu{
	display: block;
} 
/* 			End Menu 			 */
.promo__logo{
	width: 600px;
	position: absolute;
    top: 50%;  /* position the top  edge of the element at the middle of the parent */
    left: 50%; /* position the left edge of the element at the middle of the parent */
    transform: translate(-50%, -50%);
}
.promo__logo img{
	width: inherit;
}
.promo__continue{
	position: absolute;
	bottom:50px;
	left:50%;
	transform: translate(-50%);
	color:#fefeff;
	text-transform: uppercase;
}
.promo__continue__icon{
	width: 0;
	height: 0;
	border-left: 11px solid transparent;
	border-right: 11px solid transparent;
	border-top: 13px solid #ed485c;
	margin:10px auto 0;
}
@media screen and (min-width: 320px) and (max-width: 800px){
	.menu__mobile i{
		display:block;
	}
	.menu{
		display: none;
	}
	.menu li{
		text-align: left;
		display: block;
	}
}
@media screen and (min-height: 320px) and (max-height: 599px){
	.promo__continue{
		bottom:25px;
	}
}
@media screen  and (min-width:320px) 
{
	.promo__logo{
		width:275px;
	}
}
@media screen and  (min-width:360px) 
{
	.promo__logo{
		width:330px;
	}
}
@media screen and  (min-width:600px) and (min-height: 799px){
	.promo__logo{
		width:500px;
	}
}
@media screen and  (min-width:799px){
	.promo__logo{
		width:600px;
	}
}
.devider{
	height: 26px;
	width: 144px;
	display: inline-block;
	margin-bottom: 50px;
	vertical-align:bottom;
}
.devider--red{
	background: url('../images/devider--red.png')no-repeat;
}
.devider--white{
	background: url('../images/devider--white.png')no-repeat;
}
section{
	padding: 60px 0;
	background: #f3f3f3;
	text-align:center;
}
.section__title{
	font-size: 1.5em;
}
.section__description{
	font-size: 1em;
	padding: 0 100px ;
	margin-top: 30px;
}
/*		Services 	*/
.services{
	margin-top: 100px;
}
.service__icon{
	position: relative;
	display: inline-block;
	font-size: 2em;
	color:#fefeff;
	border-left: 75px solid transparent;
	border-right: 75px solid transparent;
	border-top: 120px solid #a9b8cc;
	margin-bottom: 30px;
	vertical-align: bottom;
}
.service__icon__inner{
	text-align: center;
	width: 150px;
    position: absolute;
    top: -100px;
    left: -75px;
}
.service__description{
	padding-top:30px;
	font-size: 0.778em;
}
.service:hover .service__icon{
	border-top-color:#ed485c;
	cursor: pointer;
}
.service:hover .service__title{
	color: #ed485c;
	cursor: pointer;
}
/*		End    Services 	*/
/*		Team                */
.team{
 	margin-top:50px;
 }
 .member__avatar{
	position: absolute;
	width: 200%;
	height: 200%;
	top: -50%;
	left: -50%;
	z-index: -1;
	background: url(../images/avatar_1.png);
	background-size: 62%;
	background-position: center top;
	transform: skew(-10deg,-10deg) rotate(-45deg) ;
 }
 .member__avatar__bg{
 	display:inline-block;
 	height: 196px;
 	width: 242px;
    background: url('../images/avatar__bg.png')no-repeat;
 }
.member__avatar__box{
	display:inline-block;
	width: 232px; 
	height: 180px; 
	overflow: hidden; 
}
.member__avatar__mask{
	position: relative; 
	overflow: hidden; 
	transform: rotate(45deg) skew(10deg,10deg); 
	width: 200px;
	height:200px;
	margin:81px 0 0 16px;
}
.member__name{
	color:#ed485c;
	line-height: 2;
}
.member__career{
	font-size: 0.889em;
}
.member__social{
	font-size: 1.5em;
	color:#97a5b7;
	margin-top: 20px;
}
.member__social__icon{
	margin-right: 15px;
}
/*    End Member    */
/*    Clients        */
.clients{
	margin-top:50px;
}
.client{
	margin:0 45px;
}
/*    End Clients    */
/*    Portfolio      */
.portfolio__sort{
	margin-top: 60px;
}
.portfolio__button{
	display: inline-block;
    border: 3px solid #ed485c;
    padding: 8px 32px;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    color:#ed485c;
    font-size: 1em;
    font-weight: 600;
    font-style: normal;
    margin: 0 15px;

}
.portfolio__button:hover{
	border-color: #97a5b7!important;
	background: #97a5b7!important;
	color:#fefeff!important;
	cursor: pointer;
}
.portfolio__button--red{
    background-color: #ed485c!important;
    color: #fefeff!important;
}
.portfolio__items{
	margin: 60px auto -60px;
	max-width: 1600px;
}
.portfolio__item{
	position:relative;
	float: left;
	width: 20%;
}
.portfolio__item img{
	max-width: 100%;
}
.portfolio__item__overlay{
	position: absolute;
	content:"";
	top:-1px;
	left:0;
	bottom: 0;
	right:0;
	width:100%;
	height:100%;
	background: rgba(237,72,92,0.8);
	display: none;
}
.portfolio__item:hover .portfolio__item__overlay{
	display: block;
}
.portfolio__item__corner{
	width: 0;
	height: 0;
	position: absolute;
	top:0;
	z-index: 10;
}
.portfolio__item__corner--top-left{
	left:0;
	border-top: 45px solid white; 
	border-right: 60px solid transparent;	

}
.portfolio__item__corner--top-left a{
	color:#ed485c;
}
.portfolio__item__corner--top-right{
	right:0;
	border-top: 45px solid #ed485c; 
	border-left: 60px solid transparent;
	color:#fefeff;	
}
.portfolio__item__corner--top-right a{
	color:#fefeff;
}
.portfolio__item__corner--top-left .portfolio__item__icon{
	position: absolute;
	top:-40px;
	left:7px;
}
.portfolio__item__corner--top-right .portfolio__item__icon{
	position: absolute;
	top:-40px;
	right:7px;
}
.portfolio__item__corner .portfolio__item__icon{
	font-size: 1em;
}
/*    End Portfolio  */
.blog__items{
	margin-top: 60px;
}
.blog__item__image{
	margin-bottom:30px;
}
.blog__item__image img{
	max-width: 100%;
}
.blog__item__info{
	font-size: 0.889em;
	color:#97a5b7;
	font-style: normal ;
	margin-bottom: 30px;
}
.blog__item__date{
	float:left;
}
.blog__item__comment{
	float:right;
}
.blog__item__comment--higlight{
	color:#ed485c;
	font-weight: 600;
}
.blog__item__info .blog__item__info__icon{
	margin-right:10px;
}
.blog__item__title{
	text-transform: none;
	height: 60px;
}
.blog__item__description{
	margin-top: 30px;
	font-size: 0.889em;
	text-align: left;
}
/*    subscribe   */
.subscribe{
	margin-top: 50px;
}
.subscribe__icons{
}
.subscribe__icon{
	width: 0;
	height: 0;
	border-left: 37px solid transparent;
	border-right: 37px solid transparent;
	border-top: 56px solid transparent;
	margin:0 15px;
	font-size: 1em;
	color:#fefefe;
	position: relative;
	display: inline-block;
}
.subscribe__icon__inner{
    position: absolute;
    bottom: 25px;
    left: -37px;
    width: 74px;
    text-align: center;
    font-size: 1em;
}
.subscribe__icon--facebook{
	border-top-color: #44619d;
}
.subscribe__icon--google-plus{
	border-top-color: #db412e;
}
.subscribe__icon--twitter{
	border-top-color: #24b1d4;
}
.subscribe__icon--linkedin{
	border-top-color: #2671ae;
}
.subscribe__icon--pinterest{
	border-top-color: #cb2027;
}
.subscribe input{
	border:0;
    float: left;
    padding: 16px;
    min-width: 300px;
}

.subscribe__button{
	border:0;
	color:#fefeff;
	display: block;
	background: #ed485c;
    padding: 16px 32px;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 1em;
    font-style: normal;
    font-weight: 600;
}
.contact{
	margin-top: 80px;
}
.contact__info{
	text-align: left;
}
.contact__info__firm{
	padding: 0 15px;
	margin-bottom: 35px;
}
.contact__form input, textarea{
	display: block;
	margin-bottom: 30px;
}
.contact__form input{
	border:1px solid grey;
	padding: 10px;
    min-width: 300px;
}
.contact__form textarea{
	width: 100%;
}

